package edu.fiuba.algo3.modelo.Construccion;

public interface Creador {

    void crearZangano();
    void crearZerling();
    void crearHidralisco();
    void crearMutalisco();
    void crearZealot();
    void crearDragon();
    void crearScout();

}
