@startuml
abstract class Raza {
    - bancoDeRecursos
    - capacidadSuministro

    + agregarConstruccion()
    + recolectar()
    + crearUnidad()
}

class Zerg {
    + agregarConstruccion()
    + recolectar()
    + crearUnidad()
}

class Protoss {
    + agregarConstruccion()
    + recolectar()
    + crearUnidad()
}


abstract class ConstruccionZerg {
    - vida
    - tiempoConstruccion
    - costos
    + construir()
}

class Criadero {
    - moho : Radio
    - creador
    - larva : int
     +crearUnidad()
     +construir()
     +ampliarRadio()
}

class ReservaProduccion {
    - creador
    +crearUnidad()
    +construir()
}

class Extractor {
    +recolectar(volcan)
    +construir()
    +agregar(Zangano)
}

class Guarida {
    - creador
    +crearUnidad()
    +construir()

}

class Espiral {
    - creador
    +crearUnidad()
    +construir()

}

abstract class ConstruccionProtoss {
    - vida
    - escudo
    - tiempoConstruccion
    - costos
    + construir()
}

class Asimilador {
    +recolectar(volcan)
    +construir()
}

class NexoMineral {
    +recolectar(nodoMineral)
    +construir()
}

class Pilon {
    - energia : Radio
    +ampliarRadio()
    +construir()
}

class PuertoEstelar {
    - creador
    +crearUnidad()
    +construir()
}

class Acceso {
    - creador
     +crearUnidad()
     +construir()
}


interface Radio {
    +ampliarRadio()
}

class Moho {
    -radio : int
    +ampliarRadio()
}

class Energia {
    -radio : int
    +ampliarRadio()
}

interface Refineria {
    +recolectar(recurso)
}

class DeGas {
    +recolectar(volcan)
}

class DeMineral {
    +recolectar(volcan)
}

interface Creador {
    +crearZangano()
    +crearZerling()
    +crearHidralisco()
    +crearMutalisco()
    +crearZealot()
    +crearDragon()
    +crearScout()
}



Jugador o-left- Raza
Raza <|-- Zerg
Raza <|-- Protoss

Zerg --> ConstruccionZerg
Protoss --> ConstruccionProtoss

ConstruccionZerg <|-- Criadero
ConstruccionZerg <|-- ReservaProduccion
ConstruccionZerg <|-- Extractor
ConstruccionZerg <|-- Guarida
ConstruccionZerg <|-- Espiral

ConstruccionProtoss <|-- NexoMineral
ConstruccionProtoss <|-- Pilon
ConstruccionProtoss <|-- Asimilador
ConstruccionProtoss <|-- Acceso
ConstruccionProtoss <|-- PuertoEstelar

Criadero *-- Radio
Pilon *-- Radio
Radio <|.. Moho
Radio <|.. Energia




NexoMineral *-- Refineria
Extractor *-- Refineria
Asimilador *-- Refineria
Refineria <|.. DeGas
Refineria <|.. DeMineral

PuertoEstelar *-- Creador
ReservaProduccion *-- Creador
Acceso *-- Creador
Guarida *-- Creador
Criadero *-- Creador
Espiral *-- Creador

@enduml